# learning_platform

./: .env_template  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.md  bot_run.py  config.py  docker-compose.yaml  manage.py  pyproject.toml  setup.cfg
bot/: base_commands.py  dispatcher.py  start_commands.py  task_commands.py
learning_platform/: asgi.py  settings.py  urls.py  wsgi.py
learning_platform_server/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
service_parsing_data/: admin.py  apps.py  data_to_db.py  models.py  parser.py  tasks.py  urls.py  utils.py  views.py
service_parsing_data/migrations/: 0001_initial.py  0002_alter_tasks_count_solved_alter_tasks_difficulty.py
